syntax = "proto3";

package FileTransfer;

option csharp_namespace = "grpc.proto";

service FileTransferService {  
    rpc DownloadFile(FileRequest) returns (stream ChunkMsg);
}  

message ChunkMsg {
    string FileName = 1;
    int64 FileSize = 2;

    int32 ChunkSize = 3;
    bytes Chunk = 4;

    bool IsCanceled = 5;
}

message FileRequest {
    string FilePath = 1;
}